--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-icons": "^1.10.5",
     "bootswatch": "^5.3.0",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^2.0.0-3",
     "ngx-bootstrap": "^9.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~7.5.0",
